internal/ldapparser/ldap_parser.go
// Code generated from LDAPParser.g4 by ANTLR 4.13.0. DO NOT EDIT.

package ldapparser // LDAPParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type LDAPParser struct {
	*antlr.BaseParser
}

var LDAPParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func ldapparserParserInit() {
	staticData := &LDAPParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'('", "')'", "','", "'?'", "'*'", "'dn'", "' '",
	}
	staticData.SymbolicNames = []string{
		"", "LPAREN", "RPAREN", "COMMA", "QMARK", "ASTERISK", "DN", "WHITESPACE",
		"BASEOBJECT_SCOPE", "SINGLELEVEL_SCOPE", "WHOLESUBTREE_SCOPE", "LOCAL_LDAP_SCHEME",
		"NOT", "AND", "OR", "OBJECT_IDENTIFIER", "IDENTIFIER", "EQUALITY", "APPROXIMATE",
		"LESS_THAN_OR_EQUAL", "GREATER_THAN_OR_EQUAL", "EXTENSIBLE_RULE", "EXCLUSIONS",
	}
	staticData.RuleNames = []string{
		"uniformResourceIdentifier", "uRISearchAttributes", "uRIDelimiter",
		"searchScope", "searchFilter", "searchFilterExpr", "and", "or", "not",
		"attributeValueAssertion", "attributeTypeOrMatchingRule", "extensibleMatch",
		"equalityMatch", "greaterThanOrEqualMatch", "lessThanOrEqualMatch",
		"approximateMatch", "objectIdentifier", "openingParenthesis", "closingParenthesis",
		"distinguishedName", "attributeValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// LDAPParserInit initializes any static state used to implement LDAPParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewLDAPParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func LDAPParserInit() {
	staticData := &LDAPParserParserStaticData
	staticData.once.Do(ldapparserParserInit)
}

// NewLDAPParser produces a new parser instance for the optional input antlr.TokenStream.
func NewLDAPParser(input antlr.TokenStream) *LDAPParser {
	LDAPParserInit()
	this := new(LDAPParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &LDAPParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "LDAPParser.g4"

	return this
}

// LDAPParser tokens.
const (
	LDAPParserEOF                   = antlr.TokenEOF
	LDAPParserLPAREN                = 1
	LDAPParserRPAREN                = 2
	LDAPParserCOMMA                 = 3
	LDAPParserQMARK                 = 4
	LDAPParserASTERISK              = 5
	LDAPParserDN                    = 6
	LDAPParserWHITESPACE            = 7
	LDAPParserBASEOBJECT_SCOPE      = 8
	LDAPParserSINGLELEVEL_SCOPE     = 9
	LDAPParserWHOLESUBTREE_SCOPE    = 10
	LDAPParserLOCAL_LDAP_SCHEME     = 11
	LDAPParserNOT                   = 12
	LDAPParserAND                   = 13
	LDAPParserOR                    = 14
	LDAPParserOBJECT_IDENTIFIER     = 15
	LDAPParserIDENTIFIER            = 16
	LDAPParserEQUALITY              = 17
	LDAPParserAPPROXIMATE           = 18
	LDAPParserLESS_THAN_OR_EQUAL    = 19
	LDAPParserGREATER_THAN_OR_EQUAL = 20
	LDAPParserEXTENSIBLE_RULE       = 21
	LDAPParserEXCLUSIONS            = 22
)

// LDAPParser rules.
const (
	LDAPParserRULE_uniformResourceIdentifier   = 0
	LDAPParserRULE_uRISearchAttributes         = 1
	LDAPParserRULE_uRIDelimiter                = 2
	LDAPParserRULE_searchScope                 = 3
	LDAPParserRULE_searchFilter                = 4
	LDAPParserRULE_searchFilterExpr            = 5
	LDAPParserRULE_and                         = 6
	LDAPParserRULE_or                          = 7
	LDAPParserRULE_not                         = 8
	LDAPParserRULE_attributeValueAssertion     = 9
	LDAPParserRULE_attributeTypeOrMatchingRule = 10
	LDAPParserRULE_extensibleMatch             = 11
	LDAPParserRULE_equalityMatch               = 12
	LDAPParserRULE_greaterThanOrEqualMatch     = 13
	LDAPParserRULE_lessThanOrEqualMatch        = 14
	LDAPParserRULE_approximateMatch            = 15
	LDAPParserRULE_objectIdentifier            = 16
	LDAPParserRULE_openingParenthesis          = 17
	LDAPParserRULE_closingParenthesis          = 18
	LDAPParserRULE_distinguishedName           = 19
	LDAPParserRULE_attributeValue              = 20
)

// IUniformResourceIdentifierContext is an interface to support dynamic dispatch.
type IUniformResourceIdentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DistinguishedName() IDistinguishedNameContext
	AllURIDelimiter() []IURIDelimiterContext
	URIDelimiter(i int) IURIDelimiterContext
	URISearchAttributes() IURISearchAttributesContext
	SearchScope() ISearchScopeContext
	SearchFilter() ISearchFilterContext

	// IsUniformResourceIdentifierContext differentiates from other interfaces.
	IsUniformResourceIdentifierContext()
}

type UniformResourceIdentifierContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUniformResourceIdentifierContext() *UniformResourceIdentifierContext {
	var p = new(UniformResourceIdentifierContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_uniformResourceIdentifier
	return p
}

func InitEmptyUniformResourceIdentifierContext(p *UniformResourceIdentifierContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_uniformResourceIdentifier
}

func (*UniformResourceIdentifierContext) IsUniformResourceIdentifierContext() {}

func NewUniformResourceIdentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UniformResourceIdentifierContext {
	var p = new(UniformResourceIdentifierContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LDAPParserRULE_uniformResourceIdentifier

	return p
}

func (s *UniformResourceIdentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *UniformResourceIdentifierContext) DistinguishedName() IDistinguishedNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDistinguishedNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDistinguishedNameContext)
}

func (s *UniformResourceIdentifierContext) AllURIDelimiter() []IURIDelimiterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IURIDelimiterContext); ok {
			len++
		}
	}

	tst := make([]IURIDelimiterContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IURIDelimiterContext); ok {
			tst[i] = t.(IURIDelimiterContext)
			i++
		}
	}

	return tst
}

func (s *UniformResourceIdentifierContext) URIDelimiter(i int) IURIDelimiterContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IURIDelimiterContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IURIDelimiterContext)
}

func (s *UniformResourceIdentifierContext) URISearchAttributes() IURISearchAttributesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IURISearchAttributesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IURISearchAttributesContext)
}

func (s *UniformResourceIdentifierContext) SearchScope() ISearchScopeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISearchScopeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISearchScopeContext)
}

func (s *UniformResourceIdentifierContext) SearchFilter() ISearchFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISearchFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISearchFilterContext)
}

func (s *UniformResourceIdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UniformResourceIdentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UniformResourceIdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.EnterUniformResourceIdentifier(s)
	}
}

func (s *UniformResourceIdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.ExitUniformResourceIdentifier(s)
	}
}

func (p *LDAPParser) UniformResourceIdentifier() (localctx IUniformResourceIdentifierContext) {
	localctx = NewUniformResourceIdentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LDAPParserRULE_uniformResourceIdentifier)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.DistinguishedName()
	}
	{
		p.SetState(43)
		p.URIDelimiter()
	}
	{
		p.SetState(44)
		p.URISearchAttributes()
	}
	{
		p.SetState(45)
		p.URIDelimiter()
	}
	{
		p.SetState(46)
		p.SearchScope()
	}
	{
		p.SetState(47)
		p.URIDelimiter()
	}
	{
		p.SetState(48)
		p.SearchFilter()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IURISearchAttributesContext is an interface to support dynamic dispatch.
type IURISearchAttributesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllAttributeTypeOrMatchingRule() []IAttributeTypeOrMatchingRuleContext
	AttributeTypeOrMatchingRule(i int) IAttributeTypeOrMatchingRuleContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsURISearchAttributesContext differentiates from other interfaces.
	IsURISearchAttributesContext()
}

type URISearchAttributesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyURISearchAttributesContext() *URISearchAttributesContext {
	var p = new(URISearchAttributesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_uRISearchAttributes
	return p
}

func InitEmptyURISearchAttributesContext(p *URISearchAttributesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_uRISearchAttributes
}

func (*URISearchAttributesContext) IsURISearchAttributesContext() {}

func NewURISearchAttributesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *URISearchAttributesContext {
	var p = new(URISearchAttributesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LDAPParserRULE_uRISearchAttributes

	return p
}

func (s *URISearchAttributesContext) GetParser() antlr.Parser { return s.parser }

func (s *URISearchAttributesContext) AllAttributeTypeOrMatchingRule() []IAttributeTypeOrMatchingRuleContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAttributeTypeOrMatchingRuleContext); ok {
			len++
		}
	}

	tst := make([]IAttributeTypeOrMatchingRuleContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAttributeTypeOrMatchingRuleContext); ok {
			tst[i] = t.(IAttributeTypeOrMatchingRuleContext)
			i++
		}
	}

	return tst
}

func (s *URISearchAttributesContext) AttributeTypeOrMatchingRule(i int) IAttributeTypeOrMatchingRuleContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttributeTypeOrMatchingRuleContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttributeTypeOrMatchingRuleContext)
}

func (s *URISearchAttributesContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(LDAPParserCOMMA)
}

func (s *URISearchAttributesContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(LDAPParserCOMMA, i)
}

func (s *URISearchAttributesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *URISearchAttributesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *URISearchAttributesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.EnterURISearchAttributes(s)
	}
}

func (s *URISearchAttributesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.ExitURISearchAttributes(s)
	}
}

func (p *LDAPParser) URISearchAttributes() (localctx IURISearchAttributesContext) {
	localctx = NewURISearchAttributesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LDAPParserRULE_uRISearchAttributes)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.AttributeTypeOrMatchingRule()
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == LDAPParserCOMMA {
		{
			p.SetState(51)
			p.Match(LDAPParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(52)
			p.AttributeTypeOrMatchingRule()
		}

		p.SetState(57)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IURIDelimiterContext is an interface to support dynamic dispatch.
type IURIDelimiterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	QMARK() antlr.TerminalNode

	// IsURIDelimiterContext differentiates from other interfaces.
	IsURIDelimiterContext()
}

type URIDelimiterContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyURIDelimiterContext() *URIDelimiterContext {
	var p = new(URIDelimiterContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_uRIDelimiter
	return p
}

func InitEmptyURIDelimiterContext(p *URIDelimiterContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_uRIDelimiter
}

func (*URIDelimiterContext) IsURIDelimiterContext() {}

func NewURIDelimiterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *URIDelimiterContext {
	var p = new(URIDelimiterContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LDAPParserRULE_uRIDelimiter

	return p
}

func (s *URIDelimiterContext) GetParser() antlr.Parser { return s.parser }

func (s *URIDelimiterContext) QMARK() antlr.TerminalNode {
	return s.GetToken(LDAPParserQMARK, 0)
}

func (s *URIDelimiterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *URIDelimiterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *URIDelimiterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.EnterURIDelimiter(s)
	}
}

func (s *URIDelimiterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.ExitURIDelimiter(s)
	}
}

func (p *LDAPParser) URIDelimiter() (localctx IURIDelimiterContext) {
	localctx = NewURIDelimiterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LDAPParserRULE_uRIDelimiter)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(LDAPParserQMARK)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISearchScopeContext is an interface to support dynamic dispatch.
type ISearchScopeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsSearchScopeContext differentiates from other interfaces.
	IsSearchScopeContext()
}

type SearchScopeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySearchScopeContext() *SearchScopeContext {
	var p = new(SearchScopeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_searchScope
	return p
}

func InitEmptySearchScopeContext(p *SearchScopeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LDAPParserRULE_searchScope
}

func (*SearchScopeContext) IsSearchScopeContext() {}

func NewSearchScopeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SearchScopeContext {
	var p = new(SearchScopeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LDAPParserRULE_searchScope

	return p
}

func (s *SearchScopeContext) GetParser() antlr.Parser { return s.parser }

func (s *SearchScopeContext) CopyAll(ctx *SearchScopeContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *SearchScopeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SearchScopeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type Subtree_scopeContext struct {
	SearchScopeContext
}

func NewSubtree_scopeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Subtree_scopeContext {
	var p = new(Subtree_scopeContext)

	InitEmptySearchScopeContext(&p.SearchScopeContext)
	p.parser = parser
	p.CopyAll(ctx.(*SearchScopeContext))

	return p
}

func (s *Subtree_scopeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Subtree_scopeContext) WHOLESUBTREE_SCOPE() antlr.TerminalNode {
	return s.GetToken(LDAPParserWHOLESUBTREE_SCOPE, 0)
}

func (s *Subtree_scopeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.EnterSubtree_scope(s)
	}
}

func (s *Subtree_scopeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.ExitSubtree_scope(s)
	}
}

type Onelevel_scopeContext struct {
	SearchScopeContext
}

func NewOnelevel_scopeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Onelevel_scopeContext {
	var p = new(Onelevel_scopeContext)

	InitEmptySearchScopeContext(&p.SearchScopeContext)
	p.parser = parser
	p.CopyAll(ctx.(*SearchScopeContext))

	return p
}

func (s *Onelevel_scopeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Onelevel_scopeContext) SINGLELEVEL_SCOPE() antlr.TerminalNode {
	return s.GetToken(LDAPParserSINGLELEVEL_SCOPE, 0)
}

func (s *Onelevel_scopeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.EnterOnelevel_scope(s)
	}
}

func (s *Onelevel_scopeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.ExitOnelevel_scope(s)
	}
}

type BaseObject_scopeContext struct {
	SearchScopeContext
}

func NewBaseObject_scopeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BaseObject_scopeContext {
	var p = new(BaseObject_scopeContext)

	InitEmptySearchScopeContext(&p.SearchScopeContext)
	p.parser = parser
	p.CopyAll(ctx.(*SearchScopeContext))

	return p
}

func (s *BaseObject_scopeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BaseObject_scopeContext) BASEOBJECT_SCOPE() antlr.TerminalNode {
	return s.GetToken(LDAPParserBASEOBJECT_SCOPE, 0)
}

func (s *BaseObject_scopeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.EnterBaseObject_scope(s)
	}
}

func (s *BaseObject_scopeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LDAPParserListener); ok {
		listenerT.ExitBaseObject_scope(s)
	}
}

func (p *LDAPParser) SearchScope() (localctx ISearchScopeContext) {
	localctx = NewSearchScopeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LDAPParserRULE_searchScope)
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case LDAPParserBASEOBJECT_SCOPE:
		localctx = NewBaseObject_scopeContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			p.Match(LDAPParserBASEOBJECT_SCOPE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
